Give FlowPropertiesTests its own fixture; document test coverage in Javadoc
application.yaml no longer ships default flow configuration, so
FlowPropertiesTests binds against a dedicated flow-properties-test.yaml
instead of the application defaults. Every test class now carries a
class-level Javadoc summarizing the cases it covers.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018wGdjupVAGNGfCrnWnd826